syntax = "proto3";

package srpc.test;

import "google/protobuf/empty.proto";

option csharp_namespace = "sRPC.Test.Proto";

// a simple service definition
service SimpleService {
	// calculates the square root of the number
	rpc Sqrt(SqrtRequest)
		returns (SqrtResponse);
	// this call will never finish and will indefinitely run
	rpc Indefinite(google.protobuf.Empty)
		returns (google.protobuf.Empty);
}

// the request object for the Sqrt call
message SqrtRequest {
	// the input value
	double value = 1;
}

// the response object for the Sqrt call
message SqrtResponse {
	// the result value
	double value = 1;
}
